--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Controle de Gastos</title>
     <link rel="stylesheet" href="style.css">
-    <script src="script.js"></script>
 </head>
 
 <body>
@@ -14,14 +13,14 @@
     <main>
         <h1>Controle de Gastos</h1>
         <form id="form">
-            <input id="valor" type="number" placeholder="Digite o valor gasto">
-            <select id="categoria"> 
+            <input type="number" id="valor" name="valor" placeholder="Digite o valor gasto">
+            <select id="categoria" name="categoria"> 
                 <option value="Alimentacao">Alimentação</option>
                 <option value="Transporte">Transporte</option>
                 <option value="Lazer">Lazer</option>
                 <option value="Outros">Outros</option>
             </select>
-            <button type="button" onclick="adicionarGasto()">Adicionar</button>
+            <button type="submit">Adicionar</button>
         </form>
         <p id="Alimentacao">Alimentação: R$ 0,00</p> 
         <p id="Transporte">Transporte: R$ 0,00</p> 
@@ -29,6 +28,8 @@
         <p id="Outros">Outros: R$ 0,00</p> 
         <p id="Total">Total: R$ 0,00</p> 
     </main>
+
+    <script type="module" src="JS/app.js"></script>
 </body>
 
 </html>
